k8s/interactive-video/upload-socket/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: "interactive-upload-socket-svc"
  labels:
    app: "interactive-upload-socket"
spec:
  selector:
      app: "interactive-upload-socket"
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
