k8s/interactive-video/upload-socket/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interactive-upload-socket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.interactive-upload-socket
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interactive-upload-socket-svc
                port:
                  number: 80
